--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Howdy, 👋🏽 I'm a 22 year-old writer with a budding interest in coding that I've decided to pursue.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born here in NYC, but I grew up in the south.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Writing, Playing Video Games, and Watching Movies.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would like to make a video game one day.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Either New York or Las Vegas. </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like to create thing and I wouldn't mind making an app or two.</p>
     </section>
 
     <footer id="footer">
