--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>I would like to make a video game one day.</p>
       <h1>Where do you live?</h1>
-      <p>New Tork </p>
+      <p>New York </p>
       <h1>Why do you want to be a web developer?</h1>
       <p>I like to create thing and I wouldn't mind making an app or two.</p>
     </section>
